# ros2_simple_robot

./: README.md  hm2_video.webm
install/: local_setup.sh  setup.sh
install/my_robot_description/lib/my_robot_description/: robot_controller
install/my_robot_description/share/my_robot_description/: package.sh  package.xml
install/my_robot_description/share/my_robot_description/urdf/: minimal.urdf
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/my_robot_description/share/my_robot_description/: package.sh
ros2_ws/install/my_robot_description/share/my_robot_description/config/: view_robot.rviz
ros2_ws/install/my_robot_description/share/my_robot_description/launch/: my_robot.launch.py
ros2_ws/log/: latest_build
ros2_ws/src/my_robot_description/: setup.py
ros2_ws/src/my_robot_description/urdf/: my_robot.gv  my_robot.urdf
